testsuite/tests/rename/should_fail/rnfail043.stderr
rnfail043.hs:6:1: error: [GHC-29916] Multiple declarations of ‘f’
    At: rnfail043.hs:6:1
        rnfail043.hs:10:1

